--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <img src="images\makaut logo.jpg" alt="" style="height: 20%;width: 150px;">
 
    
-    <h1 style="color: white;"><u>MAKAUT PERCENTAGE AND MARKS CALCULATOR</u></h1>
+    <h1 style="color: white;"><u>MAKAUT PERCENTAGE AND YGPA CALCULATOR</u></h1>
     <form>
         <div style="border: 2px solid; padding: 1vh; margin: 5vh; ">
             <h2><u>For odd semester:</u></h2>
