--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <img src="images\makaut logo.jpg" alt="" style="height: 20%;width: 150px;">
 
    
-    <h1 style="color: white;"><u>MAKAUT PERCENTAGE AND MARKS CALCULATOR</u></h1>
+    <h1 style="color: white;"><u>MAKAUT PERCENTAGE AND YGPA CALCULATOR</u></h1>
     <form>
         <div style="border: 2px solid; padding: 1vh; margin: 5vh; ">
             <h2><u>For odd semester:</u></h2>
@@ -108,7 +108,7 @@
         <h4>
             Location of total credit and obtain total credit:
         </h4>
-        <img src="images\credit point.jpg" alt="" style="max-width: 100%; max-width: 100%;">
+        <img src="images/DUMMY RESULT.jpg" alt="" style="max-width: 100%; max-width: 100%;">
     </div>
 
     <div style="border: 2px solid; padding: 1vh; margin: 5vh;">
