Add Saptarshi's name

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
         ></a>
       </p>
       <p>
-        GitHub:
+       Saptarshi's GitHub:
         <a href="https://github.com/EElectriX"
           ><i class="fa-brands fa-square-github"></i
         ></a>
